module(
    name = "jni_bind",
    version = "1.0.0",
    compatibility_level = 1,
)

bazel_dep(name = "bazel_skylib", version = "1.4.2")
bazel_dep(name = "rules_java", version = "7.1.0")
bazel_dep(name = "rules_jvm_external", version = "5.2")
bazel_dep(name = "rules_license", version = "0.0.7")
bazel_dep(name = "freetype", version = "2.9")

bazel_dep(
    name = "googletest",
    version = "1.14.0",
    repo_name = "googletest",
    dev_dependency = True,
)

# Maven artifacts required by Stardoc; keep consistent with deps.bzl
MAVEN_ARTIFACTS = [
    "com.google.truth:truth:1.1.2",
    "junit:junit:4.13.2",
    "org.mockito:mockito-core:4.3.1",
]

maven = use_extension("@rules_jvm_external//:extensions.bzl", "maven")

maven.install(
    name = "maven",
    artifacts = MAVEN_ARTIFACTS,
    fail_if_repin_required = True,
    repositories = [
        "https://repo1.maven.org/maven2",
    ],
    strict_visibility = True,
)
use_repo(maven, "maven")
